--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: evolution-api
     env: node
     plan: free
-    buildCommand: npm install && npx prisma generate
+    buildCommand: npm install && npx prisma generate --schema=./prisma/schema.prisma && npx prisma migrate deploy --schema=./prisma/schema.prisma
     startCommand: npm start
     envVars:
       - key: SERVER_PORT
